[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Familiar Looking Rocket.png" type="Texture" id=1]
[ext_resource path="res://particles/Rocket.tres" type="Material" id=2]
[ext_resource path="res://scripts/FamiliarRocket.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 114, 238.5 )

[node name="Familiar Rocket" type="RigidBody2D"]
contacts_reported = 1
contact_monitor = true
script = ExtResource( 3 )

[node name="RocketR" type="Particles2D" parent="."]
position = Vector2( -66, 238 )
emitting = false
speed_scale = 3.0
local_coords = false
process_material = ExtResource( 2 )

[node name="RocketL" type="Particles2D" parent="."]
position = Vector2( 66, 238 )
emitting = false
speed_scale = 3.0
local_coords = false
process_material = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0.5 )
shape = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Familiar_Rocket_body_entered"]
